Day 4 Part 1 complete

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "python.pythonPath": "/usr/bin/python3"
+    "python.pythonPath": "/home/jon/.local/share/virtualenvs/AoC2018-7zFdeWSA/bin/python"
 }
