--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,4 @@
 {
-    "python.pythonPath": "/home/jon/.local/share/virtualenvs/AoC2018-7zFdeWSA/bin/python"
+    "python.pythonPath": "/home/jon/.local/share/virtualenvs/AoC2018-7zFdeWSA/bin/python",
+    "python.formatting.provider": "black"
 }
