Day 19 Part 2 done

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,9 @@
 {
     "python.pythonPath": "/home/jon/.local/share/virtualenvs/AoC2018-7zFdeWSA/bin/python",
-    "python.formatting.provider": "black"
+    "python.formatting.provider": "black",
+    "spellright.language": [],
+    "spellright.documentTypes": [
+        "markdown",
+        "latex"
+    ]
 }
